# QVlcTest

./: README.md
qvlctest/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qvlc.cpp  qvlc.h
